2006-09-01  Michael Natterer  <mitch@gimp.org>

	This commit *should* fix the remaining missing contexts for
	preview creation. Eek at me if it doesn't.

	* app/core/gimpundo.c: pass a struct containing a context to
	gimp_undo_create_preview_idle().

	* app/widgets/gimpundoeditor.[ch]: implement
	GimpDocked::set_context(), remember the context and use it for the
	undo treeview.

	* app/widgets/gimpviewrenderergradient.c: disable debugging output.

2006-09-01  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpaction.[ch]: added a context property and use
	it when creating GimpViews.

	* app/actions/file-actions.c: set the context on the "Open Recent"
	actions.

2006-09-01  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainercombobox.c: implement set_context() and
	set the view renderers' contexts.

	(gimp_container_combo_box_insert_item): unselect after inserting
	the first item, GimpContainerView doesn't select items by itself.

	* app/dialogs/image-new-dialog.c: create a local context for the
	combo box, connect to the context's "template-changed" signal
	instead of the combo boxed's "select-item", fix some stuff and
	don't leak the local GimpTemplate.

2006-09-01  Sven Neumann  <sven@gimp.org>

	* app/core/gimpgradient.c: disallow NULL context and removed code
	that used to deal with this case.

2006-09-01  Simon Budig  <simon@gimp.org>

	* tools/pdbgen/pdb/gradient.pdb: minor documentation fix

	* app/pdb/gradient_cmds.c
	* libgimp/gimpgradient_pdb.c: regenerated

2006-09-01  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.[ch]: use a hash table instead of object
	data to maintain context ids. Saves lots of pointless string copies.

2006-09-01  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewabledialog.[ch]: added GimpContext
	parameters and create the GimpView with that context.

	* app/widgets/gimpcolordialog.[ch]
	* app/dialogs/convert-dialog.[ch]
	* app/dialogs/desaturate-dialog.[ch]
	* app/dialogs/grid-dialog.[ch]